# smartcar-pictures-transport

./: 车图传.c
上位机代码/: CMakeLists.txt  main.cpp  ty.h
反汇编/: dnSpy-x86.exe.config  swj.h  ~$说明.doc  更新.txt  说明.doc  配置.ini
反汇编/Detect it Easy/base/: die.ini
反汇编/采集的赛道示范/: Password.sdad  Password.txt  data.Tux  光影直线.Tux  十字.Tux  十字路口.Tux  安全出口.Tux  弯.Tux  弯道.Tux  斑马线.Tux  环岛1.Tux  直线.Tux
